[package]
name = "procmon"
version = "0.1.0"
edition = "2024"
authors = ["Chirag K Poojary"]
description = "ProcMon: terminal-based process monitor in Rust. Displays CPU, memory, threads, and priority in real-time."

license = "MIT"
repository = "https://github.com/chiragkpoojary/procmon"
homepage = "https://github.com/chiragkpoojary/procmon"
readme = "README.md"
[dependencies]


prettytable = "0.10.0"
procfs = "0.17.0"
terminal_size = "0.4.3"
crossterm = "0.29.0"


[build-dependencies]

